# cornflakes

./: .buildinfo  .cookietemple.yml  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  README.rst  _logging.yaml  authors.html  build.py  code_of_conduct.html  conflates.html  contributing.html  cookietemple.cfg  cornflakes.builder.html  cornflakes.cli.html  cornflakes.click.html  cornflakes.click.options.html  cornflakes.click.rich.html  cornflakes.common.cli.html  cornflakes.common.click.html  cornflakes.common.html  cornflakes.config.html  cornflakes.decorator.click.helper.html  cornflakes.decorator.click.html  cornflakes.decorator.click.options.html  cornflakes.decorator.click.rich.html  cornflakes.decorator.config.html  cornflakes.decorator.config.validator.html  cornflakes.decorator.dataclass.html  cornflakes.decorator.dataclass.validator.html  cornflakes.decorator.dataclasses.config.html  cornflakes.decorator.dataclasses.html  (+26 more)
.github/: release-drafter.yml
.github/workflows/: build_package.yml  changelog.yml  labeler.yml  main_master_branch_protection.yml  publish_docs.yml  publish_package.yml  run_cookietemple_lint.yml  run_tests.yml  sync_project.yml
.tmp/: xcrun_db
_generate/: cornflakes.apply_match.html  cornflakes.attach_log.html  cornflakes.builder.generate_config_group_module.html  cornflakes.builder.generate_config_module.html  cornflakes.builder.generate_enum_module.html  cornflakes.cli.bump_version.html  cornflakes.cli.cli.html  cornflakes.cli.update_deps.html  cornflakes.common.check_type.html  cornflakes.common.datetime_ms.html  cornflakes.common.default_ca_path.html  cornflakes.common.extract_var_names.html  cornflakes.common.get_actual_type.html  cornflakes.common.get_method_definition.html  cornflakes.common.get_method_type_hint.html  cornflakes.common.has_return_statement.html  cornflakes.common.patch_module.html  cornflakes.common.recursive_update.html  cornflakes.common.type_to_str.html  cornflakes.common.unquoted_string.html  cornflakes.decorator.Index.html  cornflakes.decorator.click_cli.html  cornflakes.decorator.config.html  cornflakes.decorator.config_group.html  cornflakes.decorator.dataclass.html  cornflakes.decorator.field.html  cornflakes.decorator.funcat.html  cornflakes.decorator.string_builder.html  cornflakes.decorator.wrap_kwargs.html  cornflakes.eval_csv.html  cornflakes.eval_datetime.html  cornflakes.eval_json.html  cornflakes.eval_type.html  cornflakes.extract_between.html  cornflakes.generate_config_group_module.html  cornflakes.ini_load.html  cornflakes.logging.attach_log.html  cornflakes.logging.setup_logging.html  cornflakes.packaging.bump_version.html  cornflakes.packaging.update_deps.html  (+4 more)
_modules/: index.html
_modules/cornflakes/: cli.html  types.html
_sources/: contributing.rst.txt  cornflakes.builder.rst.txt  cornflakes.click.rich.rst.txt  cornflakes.click.rst.txt  cornflakes.common.rst.txt  cornflakes.config.rst.txt  cornflakes.decorator.click.options.rst.txt  cornflakes.decorator.click.rst.txt  cornflakes.decorator.config.rst.txt  cornflakes.decorator.config.validator.rst.txt  cornflakes.decorator.dataclass.rst.txt  cornflakes.decorator.dataclasses.config.rst.txt  cornflakes.logging.rst.txt  cornflakes.rst.txt  index.rst.txt  modules.rst.txt  reference.rst.txt  requirements.txt  usage.rst.txt
_static/: basic.css  documentation_options.js
cornflakes/: __init__.py  __main__.py  _default_ca_path.py  _types.py  py.typed  types.py
docs/: Makefile  authors.rst  conf.py  conflates.rst  contributing.rst  cornflakes.builder.rst  cornflakes.cli.rst  cornflakes.click.options.rst  cornflakes.click.rst  cornflakes.common.cli.rst  cornflakes.common.click.rst  cornflakes.common.rst  cornflakes.decorator.click.helper.rst  cornflakes.decorator.click.rich.rst  cornflakes.decorator.click.rst  cornflakes.decorator.config.rst  cornflakes.decorator.dataclass.rst  cornflakes.decorator.dataclass.validator.rst  cornflakes.decorator.dataclasses.rst  cornflakes.decorator.dataclasses.validator.rst  cornflakes.decorator.datalite.rst  cornflakes.decorator.rst  cornflakes.logging.rst  cornflakes.packaging.rst  cornflakes.parser.rst  cornflakes.rst  index.rst  installation.rst  make.bat  modules.rst  reference.rst  requirements.txt  usage.rst
examples/: README.rst  boto3_client.py  fastapi_settings.py  rich_click_example.py
inst/_cornflakes/: CMakeLists.txt  bindings.cpp  bindings.h  bindings.hpp  cross_endian.h  datetime_utils.h  datetime_utils.hpp  digest.cpp  digest.h  digest.hpp  endian.h  endian_linux.h  ini.cpp  ini.h  ini.hpp  string_operations.cpp  string_operations.h  string_operations.hpp  system_operations.cpp  system_operations.h  system_operations.hpp
inst/_cornflakes/hash-library/: crc32.cpp  crc32.h  digest.cpp  hash.h  hmac.h  keccak.cpp  keccak.h  md5.cpp  md5.h  readme.md  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha3.cpp  sha3.h
inst/_cornflakes/hash-library/tests/: github-issue2.cpp  github-issue6.cpp  tests.cpp
inst/_cornflakes/strtk/: .travis.yml  readme.txt  strtk.hpp  strtk_bloom_filter_example.cpp  strtk_combinations.cpp  strtk_combinator_example.cpp  strtk_converters_example.cpp  strtk_examples.cpp  strtk_glober.cpp  strtk_hexview.cpp  strtk_ipv4_parser.cpp  strtk_keyvalue_example.cpp  strtk_nth_combination_example.cpp  strtk_numstats.cpp  strtk_parse_test.cpp  strtk_period_parser.cpp  strtk_random_line.cpp  strtk_randomizer.cpp  strtk_search_trie_example.cpp  strtk_serializer_example.cpp  strtk_text_parser_example01.cpp  strtk_text_parser_example02.cpp  strtk_tokengrid_example.cpp  strtk_tokenizer_cmp.cpp  strtk_tokenizer_test.cpp  strtk_wordfreq.cpp
makefiles/: Linux.mk  Windows.mk
scripts/: bump_version.sh  update_deps.py
tests/: __init__.py  smallwikipedia.csv  test_cli.py  test_config_module.py  test_datalite.py  test_eval_csv.py  test_eval_datetime.py  test_eval_type.py  test_ini_load.py  test_json_eval.py  test_main.py  test_speed.py  test_yaml_config_loader.py  test_yaml_load.py
(+268 files in other folders)
