[tool.poetry]
name = "cornflakes"
version = "3.0.1"  # <<COOKIETEMPLE_FORCE_BUMP>>
description = "Create generic any easy to manage Configs for your Project"
authors = ["Semjon Geist <semjon.geist@ionos.com>"]
license = "Apache2.0"
readme = "README.rst"
homepage = "https://github.com/sgeist/cornflakes"
repository = "https://github.com/sgeist/cornflakes"
documentation = "https://cornflakes.readthedocs.io"
packages = [
    { include = "cornflakes/*"}
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
include = [ # include cpp sources for not compiled dist
    { path = "inst/ext", format = "sdist" },
    { path = "inst/_cornflakes", format = "sdist" }
]
exclude = [
    { path = "cornflakes/__pycache__" }
]

[tool.poetry.dependencies]
python = "^3.8.0"
PyYAML = "^5.4.1"
rich-rst = "^1.1.7"
click = "^8.1.3"
rich = "^12.6.0"
types-pyyaml = "^6.0.12.1"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.3"
coverage = {extras = ["toml"], version = ">=5.3"}
safety = ">=1.9.0"
typeguard = ">=2.12.0"
xdoctest = {extras = ["colors"], version = ">=0.15.0"}
sphinx = ">=4.0.2"
sphinx-autobuild = ">=2021.3.14"
pre-commit = ">=2.11.1"
flake8 = ">=3.8.4"
black = ">=20.8b1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.4.3"
flake8-docstrings = ">=1.5.0"
flake8-rst-docstrings = ">=0.2.3"
pep8-naming = ">=0.11.1"
darglint = ">=1.5.8"
pre-commit-hooks = ">=4.0.1"
sphinx-rtd-theme = ">=0.5.0"
sphinx-click = ">=3.0.0"
Pygments = ">=2.8.1"
types-pkg-resources = ">=0.1.2"
types-requests = ">=2.25.2"
types-attrs = ">=19.1.0"
sphinx-rtd-dark-mode = ">=1.2.3"
Jinja2 = ">=3.0.1"
mypy = ">=0.910"
pyupgrade = ">=2.31.0"
myst_parser = ">=0.18.0"
breathe = ">=4.34.0"
Cython  = ">=0.29.32"
mock = ">=4.0.3"
docutils = ">=0.17.1"
setuptools = "^65.5.0"
ninja = ">=1.10.2.4"
pybind11 = ">=2.10.1"
nox = "^2022.8.7"
nox-poetry = "^1.0.1"

[tool.poetry.scripts]
cornflakes = "cornflakes.__main__:main"

[[tool.poetry.source]]
name = "cornflakes"
url = "https://pypi.org/"
default = false
secondary = false

[tool.black]
line-length = 120

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[pytype]
inputs = "cornflakes"

[tool.isort]
skip = ["__init__.py"] # isort different behaviour on ci
force_sort_within_sections=true
multi_line_output=3
include_trailing_comma=true
balanced_wrapping=true
line_length=120
profile = "black"

[tool.coverage.paths]
source = ["cornflakes", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["cornflakes"]

[tool.coverage.report]
show_missing = true

[tool.poetry.build]
script = "build.py"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "wheel",
    "ninja",
    "cmake>=3.12",
    "setuptools",
    "docutils",
    "pybind11"
#    "fastentrypoints"
]
#build-backend = "setuptools.build_meta"
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
before-build = "rm -rf {project}/build"
after-build = "rm -rf {project}/build"
